# vTeam

./: .claudeignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM-API-EXAMPLES.md  DEPLOYMENT.md  Dockerfile  FILE_UPLOAD_README.md  FILE_UPLOAD_TEST.md  GIT_INTEGRATION_TEST_CHECKLIST.md  LICENSE  LLAMA_DEPLOY_UPLOAD.md  Makefile  OPENSHIFT-DEPLOYMENT.md  OPENSHIFT_DEPLOY.md  OPENSHIFT_DEPLOYMENT.md  PHASE1_IMPLEMENTATION.md  PROJECT_SYSTEM_SUMMARY.md  README.md  STARTUP_FILE_UPLOAD.md  cli_agent.py  deploy-to-k8s.sh  deploy-to-openshift.sh  deploy.py  deployment.yml  docker-compose.yml  docs-plan.md  env.template  k8s-deployment.yaml  llama_stack_setup.py  main.py  mkdocs.yml  openshift-deployment.yaml  package-lock.json  package.json  plan-feature.sh  (+12 more)
.claude/agents/: api-endpoint-tester.md  docs-maintainer.md
.claude/commands/: breakdown-feature.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  epic.md  feature_request.md  outcome.md  story.md
.github/prompts/: bug-assessment.prompt.yml  feature-assessment.prompt.yml  general-assessment.prompt.yml
.github/workflows/: ai-assessment-comment-labeler.yml  auto-assign-todo.yml  claude-code-review.yml  claude.yml  components-build-deploy.yml  components-build.yml  dependabot-auto-merge.yml  image.yml  outcome-metrics.yml  project-automation.yml  rfe-builder-tests.yml
.specify/templates/: plan-template.md
Prompts/: feature-assessment.prompt.yml
agents/: archie-architect.md  archie.md  aria.md  casey.md  dan-senior_director.md  dan.md  diego-program_manager.md  diego.md  emma.md  felix-ux_feature_lead.md  felix.md  jack-delivery_owner.md  jack.md  lee.md  olivia.md  parker.md  phoenix.md  ryan-ux_researcher.md  ryan.md  sam-scrum_master.md  sam.md  stella.md  steve-ux_designer.md  steve.md  taylor-team_member.md  taylor.md  terry.md  tessa.md  uma.md  ux-feature-workflow.md
app/: globals.css
components/: README.md  SECRET_SETUP.md  rfe_progress.tsx
components/backend/: .gitignore  Dockerfile  Makefile  agents.go  git_config_test.go  go.mod  go.sum  handlers.go  main.go  test_runner.sh
components/frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
components/manifests/: .gitignore  backend-deployment.yaml  claude-runner-rbac.yaml  crd.yaml  deploy.sh  env.example  frontend-deployment.yaml  git-configmap.yaml  kustomization.yaml  namespace.yaml  operator-deployment.yaml  pvc.yaml  rbac.yaml  route.yaml  secrets.yaml  workspace-pvc.yaml
components/operator/: .gitignore  Dockerfile  go.mod  main.go
components/runners/claude-code-runner/: CLAUDE.md  Dockerfile  README.md  agent_loader.py  auth_handler.py  git_integration.py  main.py  pyproject.toml  requirements.txt  simple_test.py  spek_kit_integration.py  test-git-integration.sh  test_agent_integration.py  test_git_integration.py
components/runners/claude-code-runner/agents/: content_strategist.yaml  documentation_program_manager.yaml  ux_architect.yaml
demos/claude-runner/: .gitignore  Makefile  README.md  env.example
demos/rfe-builder/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fedora  OPENSHIFT_DEPLOYMENT.md  README.md  VERTEX_AI_SETUP.md  app.py  deployment.yml  requirements.txt  startup.sh  test_async_patterns.py  test_rfe_builder.py  test_ui_imports.py
demos/rfe-builder-archived/: .flake8  .gitignore  README.md  app.py  check_vertex_setup.py
diagrams/: rfe-council-workflow-2025-08-mermaid.mmd  rfe-refinement-flow.mmd
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CODE_RUNNER.md  CLI_DEPLOYMENT_GUIDE.md  CLI_GUIDE.md  DEPLOYMENT.md  GETTING_STARTED.md  OPENSHIFT_DEPLOY.md  OPENSHIFT_OAUTH.md  README.md  index.md
docs/ambient-runner/: API.md  SETUP.md
docs/api/: authentication.md  endpoints.md
docs/architecture/: decisions.md  overview.md
docs/deployment/: configuration.md  installation.md
docs/developer-guide/: index.md
docs/development/: setup.md  standards.md  testing.md
docs/labs/: index.md
docs/reference/: glossary.md  index.md
docs/user-guide/: faq.md  getting-started.md  index.md
frontend/: .gitignore  JIRA_RFE_UI_README.md  package-lock.json  package.json  webpack.dev.js
frontend/src/: config.ts  index.html
openshift/: configmap.yaml  deploy.sh  deployment.yaml  deployment.yaml.bak  pvc.yaml
prompts/: refine_feature.md
python-rag-ingestion/: .gitignore  README.md  enhanced_ingest.py  ingest.py  pyproject.toml  setup.sh  simple_ingest.py
python-rag-ingestion/rhoai_rag_ingestion/: __init__.py  cli.py
src/: __init__.py  agents.py  artifact_editor_workflow.py  file_upload_handler.py  file_upload_workflow.py  generate.py  generate.ts  index.ts  ingestion.py  prompts.py  rag.py  rfe_builder_workflow.py  session_context_manager.py  settings.py  workflow.py
src/agents/: README.md  architect.yaml  backend_eng.yaml  frontend_eng.yaml  pm.yaml  product_owner.yaml  sme_researcher.yaml  team_lead.yaml  technical_writer.yaml  ux_team_lead.yaml  uxd.yaml
src/app/: agentLoader.ts  agents.ts  data.ts  enhanced-data.ts  events.ts  hybrid-data.ts  prompts.ts  settings.ts  workflow.ts
src/mcp_client_integration/: INSTALLATION.md  RFE_BUILDER_INTEGRATION.md  __init__.py  endpoint_connector.py  llama_index_tool.py  pyproject.toml
src/mcp_client_integration/common/: connection_manager.py  validation.py
src/mcp_client_integration/tests/integration/: __init__.py
src/mcp_client_integration/tests/unit/: __init__.py
src/prompts/: architecture-diagram.md  component-teams.md  feature-refinement.md  final-document.md  rfe-document.md
src/rhoai_ai_feature_sizing/: llama_stack_setup.py  main.py  run_api.py  setup_rag_docs.py  unified_agent.py
src/vteam_shared_configs/: __init__.py
stages/: refine_feature.py
tools/: mcp_jira.py
tools/mcp_client_integration/: README.md  SECURITY.md  llama_integration.py  simple_mcp_client.py
tools/vteam_shared_configs/: cli.py  installer.py
ui/: index.ts  package-lock.json  package.json
(+330 files in other folders)
