[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vteam-shared-configs"
version = "1.0.0"
description = "Shared Claude Code configuration for vTeam development standards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Jeremy Eder", email = "jeremy@example.com"},
]
keywords = ["claude", "configuration", "development", "team", "standards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/red-hat-data-services/vTeam"
Repository = "https://github.com/red-hat-data-services/vTeam"
Issues = "https://github.com/red-hat-data-services/vTeam/issues"

[project.scripts]
vteam-config = "vteam_shared_configs.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vteam_shared_configs"]
