[project]
name = "claude-code-runner"
version = "0.1.0"
description = "Runner that streams via Claude Code SDK and syncs workspace via PVC proxy"
readme = "CLAUDE.md"
requires-python = ">=3.11"
authors = [
  { name = "vTeam" }
]
dependencies = [
  "requests>=2.31.0",
  "aiohttp>=3.8.0",
  "pyjwt>=2.8.0",
  "claude-code-sdk>=0.0.23",
  "anthropic>=0.68.0"
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

